`clojure`: honor `:exclusions` more comprehensively